chore: update openapi (#22)
* Add delete endpoint

* Add more test for metadata

* Update packages
