# openapi.yaml
@@ -50,6 +50,10 @@ components:
       type: string
       description: The amount of tokens paid per byte per second per slot to hosts the client is willing to pay
 
+    CollateralPerByte:
+      type: string
+      description: Number as decimal string that represents how much collateral per byte is asked from hosts that wants to fill a slots
+
     Duration:
       type: integer
       format: int64
@@ -120,6 +124,9 @@ components:
         revision:
           type: string
           example: 0c647d8
+        contracts:
+          type: string
+          example: 0b537c7
 
     PeersTable:
       type: object
@@ -198,6 +205,7 @@ components:
       required:
         - id
         - totalRemainingCollateral
+        - freeSize
       allOf:
         - $ref: "#/components/schemas/SalesAvailability"
         - type: object
@@ -320,8 +328,7 @@ components:
           default: 1
           minimum: 1
         collateralPerByte:
-          type: string
-          description: Number as decimal string that represents how much collateral per byte is asked from hosts that wants to fill a slots
+          $ref: "#/components/schemas/CollateralPerByte"
         expiry:
           type: integer
           format: int64
@@ -351,6 +358,8 @@ components:
           $ref: "#/components/schemas/ProofProbability"
         pricePerBytePerSecond:
           $ref: "#/components/schemas/PricePerBytePerSecond"
+        collateralPerByte:
+          $ref: "#/components/schemas/CollateralPerByte"
         maxSlotLoss:
           type: integer
           format: int64
@@ -392,7 +401,7 @@ components:
           description: Description of the Request's state
           enum:
             - cancelled
-            - error
+            - errored
             - failed
             - finished
             - pending
@@ -586,6 +595,8 @@ paths:
             text/plain:
               schema:
                 type: string
+        "422":
+          description: The mimetype of the filename is invalid
         "500":
           description: Well it was bad-bad and the upload did not work out
 
@@ -616,6 +627,26 @@ paths:
           description: Content specified by the CID is unavailable locally
         "500":
           description: Well it was bad-bad
+
+    delete:
+      summary: "Deletes either a single block or an entire dataset from the local node."
+      tags: [Data]
+      operationId: deleteLocal
+      parameters:
+        - in: path
+          name: cid
+          required: true
+          schema:
+            $ref: "#/components/schemas/Cid"
+          description: Block or dataset to be deleted.
+
+      responses:
+        "204":
+          description: Data was successfully deleted.
+        "400":
+          description: Invalid CID is specified
+        "500":
+          description: There was an error during deletion
 
   "/data/{cid}/network":
     post:
